--- a/config.yml
+++ b/config.yml
@@ -35,9 +35,9 @@ languages:
                 - name: Tags
                   url: tags/
                   weight: 10
-                - name: WiKi
+                - name: 골프
                   url: https://github.com/adityatelange/hugo-PaperMod/wiki/
-                - name: Discord
+                - name: 싱가포르
                   url: https://discord.gg/ahpmTvhVmp
 
     fr:
