--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 baseURL: "/" # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
-title: PaperMod
+title: BIBIMPEN
 paginate: 5
 theme: hugo-PaperMod
 
@@ -136,24 +136,16 @@ params:
               url: tags
 
     homeInfoParams:
-        Title: "PaperMod"
+        Title: "Hello Stranger"
         Content: >
-            Welcome to demo of hugo's theme PaperMod.
+            **Welcome to BIBIMPEN's BLOG**
 
-            - **PaperMod** is a simple but fast and responsive theme with useful feature-set that enhances UX. This starter supports editing posts with NetlifyCMS, login at /admin. Most other configs (including this message!) happen in config.yml in the root directory.
-
-            - Do give a 🌟 on Github !
-
-            - PaperMod is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper).
+            - Thank you for visiting my blog! I'm currently working hard to bring you the best content possible. Please check back soon for updates and new posts. In the meantime, feel free to explore my instagram and stay connected with me. Thank you for your patience and support!
 
     socialIcons:
-        - name: github
-          url: "https://github.com/adityatelange/hugo-PaperMod"
-        - name: KoFi
-          url: "https://ko-fi.com/adityatelange"
-        - name: Rss
-          url: "index.xml"
-
+        - name: instagram
+          url: "https://www.instagram.com/robrain.photoblog/"
+  
     editPost:
         URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
         Text: "Suggest Changes" # edit text
